--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,16 +1,3 @@
-.nav-logo-title{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: row;
-}
-.nav-lang-options{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: row;
-}
-.nav-lang-options li{
-    text-decoration: none;
-    list-style: none;
+.navbar-items{
+    
 }
