--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,9 @@
-.navbar-items{
-    
+.container-fluid{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+.navbar-expand-lg .navbar-collapse{
+    align-items: flex-end;
+    justify-content: flex-end;
 }
