--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,23 +1,33 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid navbar-items">
-        <img src="../../assets/Resources/Navbar/image 1.png" alt="logo" />
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <a class="navbar-brand" href="#"><img src="../../assets/Resources/Navbar/image 1.png" alt="logo" /></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Directrices</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Categorias
                     </a>
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item"
-                                href="/PaginaJuego/proyect/Vistas/paginas/modulos/perfil.php">Perfil</a></li>
-                        <li><a class="dropdown-item"
-                                href="/PaginaJuego/proyect/Vistas/paginas/modulos/ajustes.php">Ajustes</a></li>
-                        <li><a class="dropdown-item"
-                                href="/PaginaJuego/proyect/Vistas/paginas/modulos/accesibilidad.php">Accesibilidad</a>
-                        </li>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Configuracion</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Acceder</a>
+                </li>
+
             </ul>
         </div>
     </div>
