--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer works!</p>
+<!-- footer.component.html -->
+<div class="footer-container">
+    <div class="bottom-component"></div>
+    <div class="top-component">Conectate a nuestras redes</div>
+  </div>
+  
+  
