Se terminos de rutas y modulos hasta el mosaico 50%

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,6 +10,8 @@
 
 <body>
     <app-navbar></app-navbar>
+    <app-mosaicos></app-mosaicos>
+    <app-carrusel></app-carrusel>
     <app-footer></app-footer>
 </body>
 
