--- a/src/app/mosaicos/mosaicos.component.html
+++ b/src/app/mosaicos/mosaicos.component.html
@@ -1,1 +1,17 @@
-<p>mosaicos works!</p>
+<div class="mosaicos-main">
+    <div class="mosaicos-bar-icon">
+        <input type="text" placeholder="Escribe algo aquí">
+        <i class="fa-solid fa-magnifying-glass"></i>
+    </div>
+    <div class="mosaicos-group">
+        <div class="mosaicos-item" style="background-color: #968700;"></div>
+        <div class="mosaicos-item" style="background-color: #7C3C00;"></div>
+        <div class="mosaicos-item" style="background-color: #2F013F;"></div>
+        <div class="mosaicos-item" style="background-color: #222222;"></div>
+        <div class="mosaicos-item" style="background-color: #582C54; "></div>
+        <div class="mosaicos-item" style="background-color: #06490D;"></div>
+        <div class="mosaicos-item" style="background-color: #90E900;"></div>
+        <div class="mosaicos-item" style="background-color: #CA2B2B;"></div>
+        <div class="mosaicos-item" style="background-color: #307A9A;"></div>
+    </div>
+</div>
