--- a/src/app/mosaicos/mosaicos.component.css
+++ b/src/app/mosaicos/mosaicos.component.css
@@ -5,32 +5,40 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     background-image: url("/assets/Resources/Mosaicos/iser.png");
     background-size: cover;
+    margin-bottom: 3rem;
 }
 
 /*MAIN*/
 
 /* BARRA DE NAVEGACION*/
 .mosaicos-bar-icon {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
     background: #FFFFFF;
     border: 1px solid #7E7E7E;
     border-radius: 2rem;
     width: fit-content;
     box-sizing: border-box;
-    padding: 0.3%;
+    padding: 0.4%;
     margin-bottom: 4rem;
+
 }
 
 .mosaicos-bar-icon input {
     border: none;
     width: 90%;
+    border-radius: 20px;
 }
 
 .mosaicos-bar-icon input:focus {
     outline: none;
     border: none;
+}
+.mosaicos-bar-icon i{
+cursor: pointer;
 }
 
 /* BARRA DE NAVEGACION*/
@@ -42,12 +50,14 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     grid-gap: 2rem;
+    margin-bottom: 5rem;
 }
 
 .mosaicos-item {
     flex-wrap: nowrap;
     padding: 3rem;
     cursor: pointer;
+    border-radius: 20px;
 }
 
 /* MOSAICOS*/
@@ -56,6 +66,9 @@
 
     .mosaicos-item {
         padding: 2rem;
+    }
+    .mosaicos-bar-icon{
+        padding: 0.5%;
     }
 }
 
@@ -67,5 +80,8 @@
 
     .mosaicos-item {
         padding: 2rem;
+    }
+    .mosaicos-bar-icon{
+        padding: 0.6%;
     }
 }
