--- a/src/app/mosaicos/mosaicos.component.html
+++ b/src/app/mosaicos/mosaicos.component.html
@@ -4,14 +4,59 @@
         <i class="fa-solid fa-magnifying-glass"></i>
     </div>
     <div class="mosaicos-group">
-        <div class="mosaicos-item" style="background-color: #968700;"></div>
-        <div class="mosaicos-item" style="background-color: #7C3C00;"></div>
-        <div class="mosaicos-item" style="background-color: #2F013F;"></div>
-        <div class="mosaicos-item" style="background-color: #222222;"></div>
-        <div class="mosaicos-item" style="background-color: #582C54; "></div>
-        <div class="mosaicos-item" style="background-color: #06490D;"></div>
-        <div class="mosaicos-item" style="background-color: #90E900;"></div>
-        <div class="mosaicos-item" style="background-color: #CA2B2B;"></div>
-        <div class="mosaicos-item" style="background-color: #307A9A;"></div>
+        <div class="mosaicos-item" style="background-color: #968700;">
+            <img src="assets/Resources/Mosaicos/Trabajos de grado.png" alt="logo-mosaico" />
+            <label>
+                Trabajos de grado
+            </label>
+        </div>
+        <div class="mosaicos-item" style="background-color: #7C3C00;">
+            <img src="assets/Resources/Mosaicos/tesis.png" alt="logo-mosaico" />
+            <label>
+                Tesis
+            </label>
+        </div>
+        <div class="mosaicos-item" style="background-color: #2F013F;">
+            <img src="assets/Resources/Mosaicos/Trabajos Laureado y Meritorios.png" alt="logo-mosaico" />
+            <label>
+                Trabajos Laureado y Meritorios
+            </label>
+        </div>
+        <div class="mosaicos-item" style="background-color: #222222;">
+            <img src="assets/Resources/Mosaicos/Revistas Científicas.png" alt="logo-mosaico" />
+            <label>
+                Revistas Científicas
+            </label>
+        </div>
+        <div class="mosaicos-item" style="background-color: #582C54;">
+            <img src="assets/Resources/Mosaicos/Investigación.png" alt="logo-mosaico" />
+            <label>
+                Investigación
+            </label>
+        </div>
+        <div class="mosaicos-item" style="background-color: #06490D;">
+            <img src="assets/Resources/Mosaicos/Editorial.png" alt="logo-mosaico" />
+            <label>
+                Editorial
+            </label>
+        </div>
+        <div class="mosaicos-item" style="background-color: #90E900;">
+            <img src="assets/Resources/Mosaicos/Academia.png" alt="logo-mosaico" />
+            <label>
+                Academia
+            </label>
+        </div>
+        <div class="mosaicos-item" style="background-color: #CA2B2B;">
+            <img src="assets/Resources/Mosaicos/Colecciones especiales.png" alt="logo-mosaico" />
+            <label>
+                Colecciones especiales
+            </label>
+        </div>
+        <div class="mosaicos-item" style="background-color: #307A9A;">
+            <img src="assets/Resources/Mosaicos/Formatos.png" alt="logo-mosaico" />
+            <label>
+                Formatos
+            </label>
+        </div>
     </div>
 </div>
